# ROR-KvDB

./: .gitignore  1  Cargo.toml  README.md  test  test.data  test.json  users.json
config/: local.toml  server.toml  user.toml
data/: test  test.data
src/: client.rs  command.rs  db_manager.rs  error.rs  kv.rs  lib.rs  main.rs  repl.rs  request.rs  rordb.rs  server.rs
src/cmd/: cmd_error.rs  lexer.rs  mod.rs  parser.rs  statement.rs  token.rs
src/cmd/token/: arg.rs  command.rs  datatype.rs  mod.rs  symbol.rs  token.rs
src/kv/: error.rs  kv.rs
src/service/: server.rs
src/store/: kv.rs  kv_error.rs  mod.rs
src/user/: mod.rs  snowflake.rs  user.rs  user_error.rs
tests/: test_client.rs
versions/v0.1.1/: README.md  users.json
versions/v0.1.1/config/: server.toml  user.toml
versions/v0.1.1/src/: error.rs  repl.rs
versions/v0.1.1/src/cmd/: parser.rs
versions/v0.1.1/src/cmd/token/: datatype.rs  symbol.rs
versions/v0.1.1/src/user/: mod.rs  user.rs
