[package]
name = "rdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

base64 = "0.21.0"
bincode = "1.2.1"
chrono = "0.4.23"
clap = { version = "4.1.4", default-features = false, features = ["std"] }
colored = "2.0.0"
lazy_static = "1.4.0"
regex = { version = "1.3.1", default-features = false, features = ["std"] }
same-file = "1.0.6"
serde = { version = "1.0.151", default-features = false, features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.24"
toml = "0.5.10"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
